# time-bot

./: .dockerignore  .env.ren  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  generate_img.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: .deploy.yml.un~  deploy.yml  deploy.yml~
data/: config.py
src/: gen_img.py  generate_img.py  helper.py
