[tool.poetry]
name = "webshining-timebot"
version = "0.1.0"
description = ""
authors = ["Artem <artemilienkono@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "2.0.32"
Pillow = "^9.2.0"
python-decouple = "^3.6"
pytz = "^2022.1"
TgCrypto = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
